--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,8 @@ script:
   - qmake CONFIG+=debug BigBlueBox.pro #we gonna compile for actual program
   - make
   # test complete
+  
+  after_success:
+  - bash <(curl -s https://codecov.io/bash)
  
 
