--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,11 @@ install:
  - sudo apt-get install qt5-default qttools5-dev-tools
   
 script:
+ - qmake "CONFIG+=test" BigBlueBox.pro #we gonna compile for Unit test first
+ - make
+ - ./BigBlueBox #run unit test
+ - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
+  
  - qmake -project
  - qmake src/BigBlueBox.pro
  - make
