--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,15 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
  - sudo apt-get install qt5-default qttools5-dev-tools
+ - pip install --user cpp-coveralls
 
 install:
  - sudo apt-get update
  - sudo apt-get install qt5-default qttools5-dev-tools
-  
+script:
+ - ./configure --enable-gcov && make && make check
+after_success:
+ - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 script:
  - qmake "CONFIG+=test" src/BigBlueBox.pro #we gonna compile for Unit test first
  - make
