--- a/.travis.yml
+++ b/.travis.yml
@@ -42,11 +42,11 @@ script:
  - qmake "CONFIG+=test" src/BigBlueBox.pro #we gonna compile for Unit test first
  - make
  - ./BigBlueBox #run unit test
- - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
+ #- rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
   
- - qmake -project
- - qmake src/BigBlueBox.pro
- - make
+ #- qmake -project
+ #- qmake src/BigBlueBox.pro
+ #- make
 
 # Generate and deploy documentation
 after_success:
