--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
  - sudo apt-get install qt5-default qttools5-dev-tools
- - pip install --user cpp-coveralls
+ #- pip install --user cpp-coveralls
 
 install:
  - sudo apt-get update
@@ -42,15 +42,15 @@ script:
  - qmake "CONFIG+=test" src/BigBlueBox.pro #we gonna compile for Unit test first
  - make
  - ./BigBlueBox #run unit test
- #- rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
+ - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
   
- #- qmake -project
- #- qmake src/BigBlueBox.pro
- #- make
+ - qmake -project
+ - qmake src/BigBlueBox.pro
+ - make
 
 # Generate and deploy documentation
 after_success:
-  - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  #- coveralls --exclude lib --exclude tests --gcov-options '\-lp'
   - cd $TRAVIS_BUILD_DIR
   - chmod +x generateDocumentationAndDeploy.sh
   - ./generateDocumentationAndDeploy.sh
