--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ addons:
     
 before_install:
  - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+ - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - sudo apt-get update -qq
  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
  - sudo apt-get install qt5-default qttools5-dev-tools
@@ -36,25 +37,33 @@ before_install:
 install:
  - sudo apt-get update
  - sudo apt-get install qt5-default qttools5-dev-tools
+ - sudo apt-get install -qq g++-5
+ - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
  
 script:
- #- ./configure --enable-gcov && make && make check
+ # This will make the coverage reports. 
+ - ./build.sh
+ - ./travis_qmake_gcc_cpp11_gcov
+ - ./get_code_cov.sh
+
+ # This will build and run teh program with unit tests
+ # It will then display the results of the unit tests.
  - qmake "CONFIG+=test" src/BigBlueBox.pro #we gonna compile for Unit test first
- - clang -coverage
+ - make
  - ./BigBlueBox #run unit test
  - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
  
-after_success:
- - bash <(curl -s https://codecov.io/bash)
  
-script:
+ # This will build the project without tests.
  - qmake -project
  - qmake src/BigBlueBox.pro
  - make
 
-# Generate and deploy documentation
+
 after_success:
-  #- coveralls --exclude lib --exclude tests --gcov-options '\-lp'
+  # Coverage Report
+  - bash <(curl -s https://codecov.io/bash)
+  # Generate and deploy documentation
   - cd $TRAVIS_BUILD_DIR
   - chmod +x generateDocumentationAndDeploy.sh
   - ./generateDocumentationAndDeploy.sh
