--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ install:
 script:
  # This will make the coverage reports. 
  #- ./build.sh
- - qmake src/BigBlueBox.pro
+ - qmake "CONFIG+=test" src/BigBlueBox.pro
  - make
  - ./BigBlueBox
  - ./get_code_cov.sh
