--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
  - sudo apt-get install qt5-default qttools5-dev-tools
- - chmod +x build.sh
+ - chmod +x ./get_code_cov.sh
  #- pip install --user cpp-coveralls
 
 install:
