--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,6 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
  - sudo apt-get install qt5-default qttools5-dev-tools
- - chmod +x ./get_code_cov.sh
- #- pip install --user cpp-coveralls
 
 install:
  - sudo apt-get update
@@ -42,32 +40,28 @@ install:
  - sudo pip install codecov
  
 script:
- # This will make the coverage reports. 
- #- ./build.sh
+ # This will build and run the project in test mode.
+ # Test mode will execute all unit tests and will generate a coverage report.
+ # The coverage report will be uploaded to codecov after_success.
+ #- ./build.sh # I will make this later
  - qmake "CONFIG+=test" src/BigBlueBox.pro
  - make
  - ./BigBlueBox
- #- ./get_code_cov.sh
  - codecov
-
- # This will build and run teh program with unit tests
- # It will then display the results of the unit tests.
- - qmake "CONFIG+=test" src/BigBlueBox.pro #we gonna compile for Unit test first
- - make
- - ./BigBlueBox #run unit test
  - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
  
- 
  # This will build the project without tests.
+ # It will not run the application because the GUI will timeout.
  - qmake -project
  - qmake src/BigBlueBox.pro
  - make
 
 
 after_success:
-  # Coverage Report
+  # Sends the Coverage Report to Codecov
   - bash <(curl -s https://codecov.io/bash)
-  # Generate and deploy documentation
+  
+  # Generate Doxyegn and deploy to github-pages
   - cd $TRAVIS_BUILD_DIR
   - chmod +x generateDocumentationAndDeploy.sh
   - ./generateDocumentationAndDeploy.sh
