--- a/codecov.yml
+++ b/codecov.yml
@@ -9,3 +9,5 @@ ignore:
   - "src/mainmenu.cpp"
   - "src/reportsView.cpp"
   - "src/mainwindow.cpp"
+  # The "pages" folder only contains more UI files
+  - "src/pages/.*"
