--- a/.travis.yml
+++ b/.travis.yml
@@ -26,11 +26,8 @@ addons:
       - graphviz
     
 before_install:
- - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
- - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
- - sudo apt-get update -qq
- - sudo apt-get install qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
- - sudo apt-get install qt5-default qttools5-dev-tools
+  - chmod +x ./scripts/before_install.sh
+ - ./scripts/before_install.sh
 
 install:
  - sudo apt-get update
@@ -40,15 +37,13 @@ install:
  - sudo pip install codecov
  
 script:
- # This will build and run the project in test mode.
- # Test mode will execute all unit tests and will generate a coverage report.
- # The coverage report will be uploaded to codecov after_success.
- #- ./build.sh # I will make this later
- - qmake "CONFIG+=test" src/BigBlueBox.pro
- - make
- - ./BigBlueBox
- - codecov
- - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
+ - chmod +x ./scripts/test_build_and_run.sh
+ - ./scripts/test_build_and_run.sh
+ 
+ - chmod +x ./scripts/build.sh
+ - ./scripts/build.sh
+ 
+ 
  
  # This will build the project without tests.
  # It will not run the application because the GUI will timeout.
@@ -58,10 +53,5 @@ script:
 
 
 after_success:
-  # Sends the Coverage Report to Codecov
-  - bash <(curl -s https://codecov.io/bash)
-  
-  # Generate Doxyegn and deploy to github-pages
-  - cd $TRAVIS_BUILD_DIR
-  - chmod +x generateDocumentationAndDeploy.sh
-  - ./generateDocumentationAndDeploy.sh
+ - chmod +x ./scripts/after_sucess.sh
+ - ./scripts/after_sucess.sh
