fixed deletion of coverage files

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,8 @@ script:
  - ./scripts/test_build_and_run.sh
  
  # Cleans up binaries before next build.
- - chmod +x ./scripts/clean.sh
- - ./scripts/clean.sh
- 
+ - rm Makefile BigBlueBox *.o #remove files (which are generated from unit test) for next build
+
  # Builds the project in normal mode.
  - chmod +x ./scripts/build.sh
  - ./scripts/build.sh
@@ -53,3 +52,5 @@ after_success:
  # This script sends the generated coverage reports to codecov and Doxygen documentation to github-pages.
  - chmod +x ./scripts/after_sucess.sh
  - ./scripts/after_sucess.sh
+ - chmod +x ./scripts/clean.sh
+ - ./scripts/clean.sh
