--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
  - ./scripts/before_install.sh
 
 install:
- - sudo apt-get update
+ #- sudo apt-get update
  - sudo apt-get install qt5-default qttools5-dev-tools
  - sudo apt-get install -qq g++-5
  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
