--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ before_install:
 
 install:
  #- sudo apt-get update
- - sudo apt-get install qt5-default qttools5-dev-tools
+ - sudo apt-get install qt5-default qttools5-dev-tools libqt5svg5 libqt5svg5-dev
  - sudo apt-get install -qq g++-5
  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90
  - sudo pip install codecov
