--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,7 @@
+# If appVeyor starts failing builds for no reason, go to this link and find the  most up to date path for QT mingw (line #4)
+# https://www.appveyor.com/docs/build-environment/#qt
 install:
-  - set QTDIR=C:\Qt\5.5\mingw492_32
+  - set QTDIR=C:\Qt\5.10.1\mingw53_32
   - set PATH=%PATH%;%QTDIR%\bin;C:\MinGW\bin
 build_script:
   - qmake src/BigBlueBox.pro
